Fixed header on mobile devices

--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -430,6 +430,9 @@ $red-color: #FF0000
 			justify-content: space-between
 			width: 78px
 
+	.main
+		padding-top: 55px		
+
 @media only screen and (max-width : 480px)
 
 	.switch 
